tests/snapshots/config_fixtures__extra_fields.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 3, column 1
  |
3 | unknown_field = true
  | ^^^^^^^^^^^^^
unknown field `unknown_field`, expected `host` or `port`
